@@ -1,6 +1,6 @@
 /*
 Theme Name: Portfolio Press
-Description: Portfolio Press an excellent theme for showcasing your photography, art, web sites, or other projects.  It also works nicely as a regular blog site.  An options panel is included for uploading logos and and changing the layout.  For a video screencast showing how to set up the portfolio, visit http://wptheming.com/portfolio-theme.
+Description: Portfolio Press is an excellent theme for showcasing your photography, art, web sites, or other projects.  It also works nicely as a regular blog site.  An options panel is included for uploading logos and and changing the layout.  There's also support for the image, gallery and quote post formats.  Visit the <a href="http://themes.wptheming.com/portfolio/">demo site</a> or watch the <a href="http://wptheming.com/portfolio-theme">video screencast</a> for set up instructions.
 Author: Devin Price
 Author URI: http://wptheming.com/
 Theme URI: http://wptheming.com/portfolio-theme/
@@ -13,9 +13,6 @@ Credits:
 
 Portfolio was built on the solid foundation of Toolbox:
 http://wordpress.org/extend/themes/toolbox
-
-Styles, especially the menus and buttons, were inspired by Canvas:
-http://www.woothemes.com/2010/02/canvas/
 
 */
 
@@ -573,6 +570,21 @@ figure {
 }
 .single .format-image header {
 	display:block;
+}
+.format-image .image-wrap {
+	position: relative;
+}
+.image-wrap h3 {
+	background:#000;
+	background:rgba(0,0,0,.6);
+	color:#fff;
+	padding:10px;
+	position:absolute;
+	bottom:13px;
+	left:6px;
+	width:610px;
+	display: none;
+	text-decoration: none;
 }
 
 /* Portfolio Posts */
